# GraMi

./: .gitignore  CMakeLists.txt  build.sh  test.lg
GRAMI_DIRECTED_PATTERNS/src/search/: RightMostExtension.java
GRAMI_DIRECTED_SUBGRAPHS/src/search/: RightMostExtension.java
GRAMI_UNDIRECTED_PATTERNS/src/dataStructures/: StaticData.java
GRAMI_UNDIRECTED_PATTERNS/src/search/: RightMostExtension.java
GRAMI_UNDIRECTED_SUBGRAPHS/src/search/: RightMostExtension.java
include/: graph.hpp  miner.hpp  pattern.hpp
src/: CMakeLists.txt  graph.cpp  main.cpp  miner.cpp  pattern.cpp
